[gd_scene load_steps=5 format=3 uid="uid://co38v662tkrdc"]

[ext_resource type="Script" uid="uid://djtstwptx275r" path="res://enemy_track.gd" id="1_go7uk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n15ap"]
size = Vector2(35, 36)

[sub_resource type="CircleShape2D" id="CircleShape2D_go7uk"]
radius = 17.117243

[sub_resource type="CircleShape2D" id="CircleShape2D_n15ap"]
radius = 26.172504

[node name="enemy-track" type="CharacterBody2D"]
script = ExtResource("1_go7uk")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0.9607843, 1)
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(20.5, 20)
shape = SubResource("RectangleShape2D_n15ap")

[node name="track_time" type="Timer" parent="."]
wait_time = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(20, 21)
shape = SubResource("CircleShape2D_go7uk")

[node name="Area2D2" type="Area2D" parent="." groups=["hurt"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(20, 20)
shape = SubResource("CircleShape2D_n15ap")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="track_time" to="." method="_on_track_time_timeout"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_area_2d_2_area_entered"]
